--- a/code/FindHere/local.properties
+++ b/code/FindHere/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Jun 29 11:49:53 CST 2017
-sdk.dir=C\:\\Development\\Android\\android-sdk
+#Fri Jun 30 15:59:46 CST 2017
+sdk.dir=C\:\\Users\\asus\\AppData\\Local\\Android\\sdk1
