--- a/code/Server/src/main/webapp/WEB-INF/web.xml
+++ b/code/Server/src/main/webapp/WEB-INF/web.xml
@@ -1,28 +1,34 @@
-<?xml version="1.0" encoding="utf-8"?>
-<web-app xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
-	http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
-	version="3.0">
-	
-    <display-name>Web Application</display-name>
+<?xml version="1.0" encoding="UTF-8"?>
+<web-app version="2.5" 
+    xmlns="http://java.sun.com/xml/ns/javaee" 
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+    xsi:schemaLocation="http://java.sun.com/xml/ns/javaee 
+    http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
   
+    <!--spring configure-->
     <context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>classpath:applicationContext.xml</param-value>
+		<param-value>classpath:spring-context.xml</param-value>
 	</context-param>
 
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
   
-    <filter>
-        <filter-name>struts2</filter-name>
-        <filter-class>org.apache.struts2.dispatcher.ng.filter.StrutsPrepareAndExecuteFilter</filter-class>
-    </filter>
-
-    <filter-mapping>
-        <filter-name>struts2</filter-name>
-        <url-pattern>/*</url-pattern>
-    </filter-mapping>
+	<!--spring MVC configure-->
+	<servlet>
+		<servlet-name>springmvc</servlet-name>  
+    	<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class> 
+   		<init-param>
+            <param-name>contextConfigLocation</param-name>               
+            <param-value>classpath:servlet-context.xml</param-value>
+    	</init-param> 
+    	<load-on-startup>4</load-on-startup>
+	</servlet>
+	
+    <servlet-mapping>  
+        <servlet-name>springmvc</servlet-name>  
+        <url-pattern>/</url-pattern>  
+    </servlet-mapping>
   
 </web-app>
