--- a/code/UnityProject/UnityProject.csproj
+++ b/code/UnityProject/UnityProject.csproj
@@ -116,15 +116,18 @@
     <Compile Include="Assets\Vuforia\Scripts\WireframeBehaviour.cs" />
     <Compile Include="Assets\Vuforia\Scripts\WireframeTrackableEventHandler.cs" />
     <Compile Include="Assets\Vuforia\Scripts\WordBehaviour.cs" />
+    <Compile Include="Assets\script\AnimationsManager.cs" />
     <Compile Include="Assets\script\CloudRecoHandler.cs" />
     <Compile Include="Assets\script\ContentManager.cs" />
     <Compile Include="Assets\script\HelloWorld.cs" />
     <Compile Include="Assets\script\InfoButtonTriggerListener.cs" />
     <Compile Include="Assets\script\ScanLine.cs" />
+    <Compile Include="Assets\script\TrackableEventHandler.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Plugins\Android\AndroidManifest.xml" />
     <None Include="Assets\Plugins\iOS\Vuforia.UnityExtensions.iOS.XML" />
+    <None Include="Assets\Shaders\Transparent Vertex Colored Index -1.shader" />
     <None Include="Assets\Vuforia\Editor\Scripts\Vuforia.UnityExtensions.Editor.XML" />
     <None Include="Assets\Vuforia\Editor\WebcamProfiles\profiles.xml" />
     <None Include="Assets\Vuforia\Scripts\Internal\Vuforia.UnityExtensions.XML" />
