--- a/code/FindHere/local.properties
+++ b/code/FindHere/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Jul 01 12:09:18 CST 2017
-sdk.dir=C\:\\Users\\asus\\AppData\\Local\\Android\\sdk1
+#Wed Jul 05 09:42:23 CST 2017
+sdk.dir=C\:\\Users\\msi\\AppData\\Local\\Android\\Sdk
