--- a/code/UnityProject/UnityProject.csproj
+++ b/code/UnityProject/UnityProject.csproj
@@ -76,14 +76,14 @@
     <Reference Include="UnityEditor">
       <HintPath>Library\UnityAssemblies\UnityEditor.dll</HintPath>
     </Reference>
+    <Reference Include="LitJson">
+      <HintPath>Assets\Plugins\LitJson.dll</HintPath>
+    </Reference>
     <Reference Include="System.Drawing">
       <HintPath>Assets\Plugins\System.Drawing.dll</HintPath>
     </Reference>
     <Reference Include="Vuforia.UnityExtensions">
       <HintPath>Assets\Vuforia\Scripts\Internal\Vuforia.UnityExtensions.dll</HintPath>
-    </Reference>
-    <Reference Include="LitJson">
-      <HintPath>Assets\Plugins\LitJson.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -129,6 +129,7 @@
     <Compile Include="Assets\script\ContentManager.cs" />
     <Compile Include="Assets\script\InfoLoader.cs" />
     <Compile Include="Assets\script\Model\Comment.cs" />
+    <Compile Include="Assets\script\Model\TextContent.cs" />
     <Compile Include="Assets\script\ScanLine.cs" />
     <Compile Include="Assets\script\TrackableEventHandler.cs" />
     <Compile Include="Assets\script\Utilities\JsonHelper.cs" />
