实现音频的播放及切换，解决音频及图片加载的卡顿问题

--- a/code/UnityProject/UnityProject.csproj
+++ b/code/UnityProject/UnityProject.csproj
@@ -122,6 +122,7 @@
     <Compile Include="Assets\Vuforia\Scripts\WireframeBehaviour.cs" />
     <Compile Include="Assets\Vuforia\Scripts\WireframeTrackableEventHandler.cs" />
     <Compile Include="Assets\Vuforia\Scripts\WordBehaviour.cs" />
+    <Compile Include="Assets\script\Adapters\AudioAdapter.cs" />
     <Compile Include="Assets\script\Adapters\ImageAdapter.cs" />
     <Compile Include="Assets\script\Adapters\TextAdapter.cs" />
     <Compile Include="Assets\script\AnimationsManager.cs" />
